--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,14 @@
   "name": "cv generator app built with react",
   "icons": [
     {
-      "src": "favicon.png",
-      "sizes": "32x32 24x24 16x16",
-      "type": "image/x-icon"
+        "src": "favicon.ico",
+        "sizes": "64x64 32x32 24x24 16x16",
+        "type": "image/x-icon"
+    },
+    {
+        "src": "logo192.png",
+        "type": "image/png",
+        "sizes": "192x192"
     }
   ],
   "start_url": ".",
